--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,10 @@ repositories {
 }
 
 dependencies {
-    compile('org.projectlombok:lombok:1.16.12')
+	compile 'org.apache.httpcomponents:httpclient:4.5.2'
+	compile 'com.fasterxml.jackson.core:jackson-databind:2.3.4'
+	compile 'org.projectlombok:lombok:1.16.12'
+
+	testCompile 'junit:junit:4.12'
+	testCompile 'org.assertj:assertj-core:3.6.2'
 }
